# firstagent

./: README.md  debate_report.md  pyproject.toml
src/firstagent/: crew.py  main.py
src/firstagent/config/: agents.yaml  tasks.yaml
