[project]
name = "firstagent"
version = "0.1.0"
description = "firstagent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
firstagent = "firstagent.main:run"
run_crew = "firstagent.main:run"
train = "firstagent.main:train"
replay = "firstagent.main:replay"
test = "firstagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
